--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </div>
             <div class="form-group">
                 <label>Pickup date</label>
-                <input type="datetime-local" name="pickupdate" class="form-control" required>
+                <input type="date" name="pickupdate" class="form-control" required>
             </div>
             <div class="form-group">
                 <label>Delivery date</label>
-                <input type="datetime-local" name="deliverydate" class="form-control" required>
+                <input type="date" name="deliverydate" class="form-control" required>
             </div>
             <div class="card-footer text-center">
             <button type="submit" class=" btn btn-secondary">Submit</button>
