--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/hot-sneaks/jquery-ui.css">
+  <script>
+    $(document).ready(function(){
+        $("#pickup").datepicker({
+            minDate:new Date(),
+            onSelect:function(selectedDate){
+                var date=new Date(selectedDate);
+                date.setDate(date.getDate()+1);
+$("#delivery").datepicker("option","minDate",date);
+            }
+            });
+            $("#delivery").datepicker({
+                onSelect:function(selectedDate){
+                var date=new Date(selectedDate);
+                date.setDate(date.getDate()-1);
+                $("#pickup").datepicker("option","maxDate",date);
+            }
+    });
+});
+   
+</script>
+
 </head>
 <body>
     <div class="container align-center">
@@ -22,11 +46,11 @@
             </div>
             <div class="form-group">
                 <label>Pickup date</label>
-                <input type="date" name="pickupdate" class="form-control" required>
+                <input id="pickup" type="text" name="pickupdate" class="form-control" required>
             </div>
             <div class="form-group">
                 <label>Delivery date</label>
-                <input type="date" name="deliverydate" class="form-control" required>
+                <input id="delivery" type="text" name="deliverydate" class="form-control" required>
             </div>
             <div class="card-footer text-center">
             <button type="submit" class=" btn btn-secondary">Submit</button>
